updated to include target values

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [Website_Values]
 url = https://us.movember.com/mospace/14971072?mc=1&utm_medium=share&utm_source=dynamic&utm_campaign=copy-clipboard
-html_div_type = h1
-html_class = mospace-heroarea--donations-target-amount-number
+donations_html_div_type = h1
+donations_html_class = mospace-heroarea--donations-target-amount-number
+target_html_div_type = span 
+target_html_class = mospace-heroarea--donations-target-text
 
 [Run_Values]
 sleep_time = 30
